# Blackslate

./: .cx-index.db  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: pr-preflight.yml
scripts/: download-rg-sidecar.sh  ensure-rg-sidecar.sh
src/: App.tsx  appconfig.constants.ts  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: .gitignore  README.md
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  macos_menu.rs  main.rs  workspace_snapshot.rs
src-tauri/src/fs/: commands.rs
src-tauri/src/terminal/: agent_detect.rs  commands.rs  error.rs  events.rs  logger.rs  manager.rs  mod.rs  project_stack.rs  session.rs
src-tauri/src/terminal/agent_detect/: claude_detect.rs  mod.rs
src-tauri/src/terminal/commands/: claude_sessions.rs  claude_skills.rs  git_diff.rs  git_info.rs  git_status.rs  hooks.rs  logging.rs  mod.rs  pick_folders.rs  pty.rs  wiki_files.rs
src-tauri/src/terminal/commands/tests/: claude_skills.test.rs  git_diff.test.rs  git_info.test.rs  git_status.test.rs  hooks.test.rs
src-tauri/src/terminal/session/: mod.rs  pty_session.rs  reader.rs  shell.rs
src-tauri/src/terminal/tests/: resolve_path.test.rs
src/components/: ErrorBoundary.tsx  skill-file-tree.tsx
src/hooks/: useAppLayoutShortcuts.ts  useApplyAppTheme.ts  useChromeSidebarSurface.ts  useDebouncedTerminalFitResize.ts  useGitBranch.ts  useGitPanelResize.ts  useHomeDir.ts  useIsLightTheme.ts  (+12 more)
(+174 files in other folders)
