[package]
name = "blackslate"
version = "0.1.0"
description = "The terminal built for the agentic developer — Claude Code-native macOS terminal"
authors = ["adwaithks"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "blackslate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
base64 = "0.22"
sysinfo = "0.33"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

